--- a/PeaploManagement/src/main/resources/application.properties
+++ b/PeaploManagement/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=PeaploManagement
 
-spring.docker.compose.enabled=true
-spring.docker.compose.file=compose.yaml
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
