--- a/PeaploManagement/build.gradle
+++ b/PeaploManagement/build.gradle
@@ -16,6 +16,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
