--- a/PeaploManagement/src/main/resources/application.properties
+++ b/PeaploManagement/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
